// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crewdress.js 1`] = `
====================================options=====================================
alignTernaryLines: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
  ? {
      spaceSuit: 3,
      oxygenCylinders: 6,
    }
  : {
      shirts: 3,
      paints: 3,
    };

================================================================================
`;

exports[`crewdress.js 2`] = `
====================================options=====================================
alignTernaryLines: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
    ? {
          spaceSuit: 3,
          oxygenCylinders: 6,
      }
    : {
          shirts: 3,
          paints: 3,
      };

================================================================================
`;

exports[`crewdress.js 3`] = `
====================================options=====================================
alignTernaryLines: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
			spaceSuit: 3,
			oxygenCylinders: 6,
	  }
	: {
			shirts: 3,
			paints: 3,
	  };

================================================================================
`;

exports[`crewdress.js 4`] = `
====================================options=====================================
alignTernaryLines: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
			spaceSuit: 3,
			oxygenCylinders: 6,
	  }
	: {
			shirts: 3,
			paints: 3,
	  };

================================================================================
`;
